--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.4
 beautifulsoup4==4.9.3
 Django==3.2.3
 django-livereload-server==0.3.2
+python-dotenv==0.18.0
 pytz==2021.1
 six==1.16.0
 soupsieve==2.2.1
