--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,14 @@ asgiref==3.3.4
 beautifulsoup4==4.9.3
 Django==3.2.3
 django-livereload-server==0.3.2
+django-sendgrid-v5==1.1.0
 phonenumbers==8.12.26
 python-dotenv==0.18.0
+python-http-client==3.3.2
 pytz==2021.1
+sendgrid==6.8.0
 six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
+starkbank-ecdsa==1.1.1
 tornado==6.1
